--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ background-image: url('https://i.giphy.com/media/2tNvsKkc0qFdNhJmKk/giphy.webp')
 .footer-contact-links1{
     background-position: center;
     background-size:cover;
-    background-image:url('https://i.giphy.com/media/2tNvsKkc0qFdNhJmKk/giphy.webp');
+    background-image:url('https://img.freepik.com/free-vector/background-template-with-mandala-pattern-design_1308-43584.jpg?w=1060&t=st=1692720085~exp=1692720685~hmac=6219f8a3452b92babad4e5e5d270d7790a143da90ca9069b23c8a8c3310673c7');
 }
 .footer-contact-links{
     display:flex;
