--- a/css/styles.css
+++ b/css/styles.css
@@ -165,5 +165,5 @@ background-image: url('https://i.giphy.com/media/2tNvsKkc0qFdNhJmKk/giphy.webp')
 
 }
 span {
-    color: yellowgreen;
+    color: white;
 }
