--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ h3{
 .container-fluid{
     background-position: center;
     background-size:cover;
-    background-image: url('https://img.freepik.com/free-photo/cartoon-lofi-young-manga-style-girl-studying-while-listening-music-raining-street-ai-generative_123827-24916.jpg?t=st=1692711050~exp=1692714650~hmac=a1227a85b11f61850b4b897af91a862f16acf8971fd73decae185009cba8d3b2&w=996');
+    background-image: url('https://wallpaperaccess.com/full/9336992.gif');
 }
 .btn-bg-grad{
     background-position: center;
